lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/buffer_append_str2/buffer_append_str23/buffer_append_str23.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/buffer_append_str2/buffer_append_str23/buffer_append_str23.c:49:24: error: use of undeclared identifier 's__b'
    buffer_append_str2(s__b ,str_s1 ,sz__len1 ,str_s2 ,sz__len2 );
                       ^
1 error generated.
